# DPRS

./: .gitignore  404.html  Cargo.toml  HOWTO.md  README.md  gavin.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml  PyPI.yml  pypi.yml  unittest-linux.yml  unittest-macos.yml  unittest-windows.yml
HOWTO/: index.html
archive/: life.ipynb  life_check.py
archive/life/: compute.rs
demos/: check.py  dp_check.py  dp_check_1d.py  dp_check_2d.py  dp_check_3d.py  dp_check_gjs.py  dp_fullcheck_1d.py  dp_fullcheck_2d.py  dp_fullcheck_3d.py  dp_test_1d.py  dp_test_2d.py  dp_test_3d.py  life_check.py  life_check_gjs.py  liferev_check.py
demos-reference/: index.html
directed_percolation/: Cargo.toml
directed_percolation/src/: dk.rs  enums.rs  lib.rs  parameters.rs  run.rs  simulation.rs  tracking.rs  traits.rs
docs/: HOWTO.md  index.md
docs/jupyter-notebooks/: index.md
docs/notes/: ContactProcess.md
docs/python-demos/: index.md
docs/python-modules/: index.md  utils-reference.md
documentation/: mkdocs.yml
documentation/docs/: HOWTO.md  index.md
dprs/: Cargo.toml
dprs/src/: lib.rs
dprs_core/: Cargo.toml
dprs_core/src/: dk.rs  lib.rs  parameters.rs  run.rs  tracking.rs
dprs_py/: Cargo.toml  README.md  pyproject.toml
dprs_py/demos/: dp_1d.py  dp_2d.py  dp_3d.py
dprs_py/notebooks/: Bedload1D.ipynb  Bedload2D.ipynb  Bedload2DScaling.ipynb  DP1D.ipynb  DP2D.ipynb  DP3D.ipynb  bedload_1d.ipynb  bedload_2d.ipynb  dp_1d.ipynb  essentials.py
dprs_py/src/: enums.rs  lib.rs  pyparameters.rs
dprs_py/tests/: test_dprs_version.py
dprs_web/: Cargo.toml  tsconfig.json
dprs_web/http/: 1d.js  2d.js  animate.js  dk.js  html.js  index.css  index.html  js_parameters.js  js_simulation.js  log.js  simulation_controls.js  tabbed.js  test_2d.html  test_sims.css  visualize.js  visualize_controls.js
dprs_web/src/: parameters.rs  simulation.rs  topo_bc.rs
dprs_web/typescript/: 1d.ts  2d.ts  animate.ts  dk.ts  html.ts  js_parameters.ts  js_simulation.ts  log.ts  saved_simulations.ts  simulation_controls.ts  storage.ts  tabbed.ts  visualize.ts  visualize_controls.ts
drps_web/: .gitignore  tsconfig.json
drps_web/http/: 2d.js  animate.js  index.css  storage.js  visualize.js  visualize_controls.js
drps_web/src/: lib.rs  simulation.rs
drps_web/typescript/: Makefile  animate.ts  html.ts  js_parameters.ts
jupyter-notebooks/: index.html
jupyter-notebooks/DomanyKinzel/: index.html
live-demo/http/: dk.js  index.css  index.html  js_simulation.js  simulation_controls.js
live-demo/pkg/: dprs_wasm.d.ts  dprs_wasm.js  dprs_wasm_bg.wasm  dprs_wasm_bg.wasm.d.ts
live-demos/: index.html  sims.css
live-demos/1d_DP_simulations/: index.html
live-demos/2d_DP_simulations/: index.html
live-demos/http/: 1d.js  2d.js  dk.js  index.css  js_parameters.js  simulation_controls.js  visualize.js  visualize_controls.js
live-demos/live_demo_1d/: index.html
live-demos/live_demo_2d/: index.html
live-demos/pkg/: dprs_wasm.d.ts  dprs_wasm.js  dprs_wasm_bg.wasm  dprs_wasm_bg.wasm.d.ts
notebooks/: demo.ipynb  dp.ipynb  dp_1d.ipynb  dp_1d_quick.ipynb  dp_2d.ipynb  dp_3d.ipynb  essentials.py  life.ipynb  life_2d.ipynb  life_rev_2d.ipynb
notes/ContactProcess/: index.html
py_dprs/src/: enums.rs  lib.rs
python/: Cargo.toml  pyproject.toml
python-demos/: index.html
python-demos/dp_check_1d-reference/: index.html
python-modules/: index.html
python-modules/utils-reference/: index.html
python-modules/viz-reference/: index.html
python-scripts/: index.html
python-scripts/DomanyKinzel/: index.html
python/demos/: dp_1d.py  dp_2d.py  dp_3d.py  dp_test_3d.py
python/dprs/: __init__.py  initialize.py  pydp.py  pylife.py  utils.py  viz.py
python/notebooks/: bedload_1d.ipynb  bedload_2d.ipynb  dp_1d.ipynb  dp_2d.ipynb  dp_3d.ipynb  essentials.py
python/src/: enums.rs  lib.rs  parameters.rs  pyparameters.rs
python/tests/: test_dprs_version.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/HOWTO/: index.html
site/demos-reference/: index.html
site/jupyter-notebooks/: index.html
site/python-demos/: index.html
site/python-modules/: index.html
site/search/: search_index.json
src/: dk.rs  dp.rs  dp_1d.rs  lib.rs  life.rs  life_rev.rs  parameters.rs  py_parameters.rs  sim.rs  sim_dp.rs  sim_dp_1d.rs  sim_life.rs  sim_parameters.rs  sim_pcp.rs
wasm/: 1d.html  Cargo.toml  Makefile  tsconfig.json
wasm_dprs/: Makefile
web/: mkdocs.yml
(+271 files in other folders)
