[package]
name = "dprs"
version = "0.1.25"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dprs"
crate-type = ["cdylib"]

# Latest coupled dependency for PyO3 and numpy is 0.28.0/0.28.0
[dependencies]
pyo3 = "0.28.2"
rand = "0.10.0"
rayon = "1.11.0"
