[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "dprs"
requires-python = ">=3.12"
description = 'Directed percolation-type models in Rust'
readme = 'README.md'
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    # "Operating System :: POSIX :: Linux",
    # "Operating System :: Microsoft :: Windows"
]
authors = [
  {name = 'Colin P. Stark', email = 'cstarkjp@gmail.com'},
]
keywords = [
  'directed percolation', 
  'phase transition'
]
dynamic = ["version"]

[project.urls]
homepage = "https://cstarkjp.github.io/DPRS"
repository = "https://github.com/cstarkjp/DPRS"
documentation = "https://cstarkjp.github.io/DPRS"
# "Bug Tracker" = "https://github.com/cstarkjp/Langevin"

[tool.maturin]
python-source = "python"
module-name = "dprs.sim"

## Development Status :: 2 - Pre-Alpha 
## Development Status :: 3 - Alpha
## Development Status :: 4 - Beta
## Development Status :: 5 - Production/Stable


# [project.urls]
# homepage = "https://cstarkjp.github.io/DPRS"
# repository = "https://github.com/cstarkjp/DPRS"
# documentation = "https://cstarkjp.github.io/DPRS"
# # "Bug Tracker" = "https://github.com/cstarkjp/Langevin"


# dynamic = ["version"]


