[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "dprs"
requires-python = ">=3.12"
description = 'Directed percolation-type models implemented in Rust and wrapped in Python'
readme = 'README.md'
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    # "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows"
]
authors = [
  {name = 'Colin P. Stark', email = 'cstarkjp@gmail.com'},
]
keywords = [
  'directed percolation',
  'phase transition',
  'Domany-Kinzel',
  'contact process'
]
dynamic = ["version"]

[project.urls]
homepage = "https://cstarkjp.github.io/DPRS"
repository = "https://github.com/cstarkjp/DPRS"
documentation = "https://cstarkjp.github.io/DPRS"
# "Bug Tracker" = "https://github.com/cstarkjp/Langevin"

[tool.maturin]
manifest-path = "Cargo.toml"
python-source = "python"
module-name = "dprs.sim"

# dynamic = ["version"]
